# aoc2024

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.disable  Makefile  README.md
aoc2024/: CMakeLists.txt  aoc2024.cpp
day00/: Makefile  aoc2024.h  charmap.h  point.h  solution.cpp
day01/: CMakeLists.disable  Makefile  aoc2024.cpp  locations.cpp
day01-cmake/: CMakeLists.txt  Makefile  solution.cpp  solution.h
day02/: Makefile  aoc2024.cpp  aoc2024.h  reports.cpp  solution.cpp  solution.h
day03/: Makefile  README.md  aoc2024.cpp  aoc2024.h  compile_commands.json  computer.cpp  computer.h  solution.cpp
day04/: Makefile  aoc2024.cpp  solution.cpp
day05/: Makefile  aoc2024.h  notes.txt  solution.cpp  solution.h
day06/: Makefile  aoc2024.cpp  aoc2024.h  solution.cpp
day07/: Makefile  aoc2024.cpp  aoc2024.h  solution  solution.cpp  solution.h
day08/: CMakeLists.disable  Makefile  solution.cpp  solution.h
day09/: Makefile  solution.cpp  solution.h
day10/: Makefile  solution.cpp
day11/: Makefile  solution.cpp
day12/: Makefile  aoc2024.cpp  aoc2024.h  charmap.cpp  charmap.h  solution.cpp  solution.h
day13/: Makefile  solution.cpp
day14/: Makefile  solution.cpp
day15/: Makefile  aoc2024.cpp  point.h  solution.cpp  solution.h
day16/: Makefile  charmap.h  point.h  solution.cpp  solution.fails  solution.h
day17/: Makefile  aoc2024.cpp  solution.cpp  solution.h
day18/: Makefile  charmap2.h  point.cpp  solution.cpp  solution.h
day19/: Makefile  point.cpp  solution.cpp  solution.h
day20/: Makefile  charmap2.h  point.cpp  sam.py  solution.cpp  (+1 more)
(+23 files in other folders)
